--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
 							</span>
                             <div class="main-comment-content">
                                 <div class="main-comment-text">
-                                    <p>Great quality and great functions, he know exactly how to satisfy consumers</p>
+                                    <p>Great quality and great functions, he knows exactly how to satisfy customers</p>
                                 </div>
                                 <div class="main-comment-author">
                                     <p><strong class="main-comment-author-name">Zavijuan</strong> Freelancer.com Employer</p>
