--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
                                     </ul>
                                 </div>
                                 <!-- Copyright -->
-                                <div class="copyright">© 2019, Ohio Theme. Made with passion by <a href="http://clbthemes.com/" target="_blank">Colabrio</a>.
+                                <div class="copyright">© 2020, Copyright Svart Mane Produksjoner. Anas Gamrani</a>.
                                     <br>All right reserved.</div>
                                 <div class="clb-social vc_hidden-xs visible">
                                     <ul class="clb-social-holder font-titles">
                                         <li>Follow Us</li>
                                         <li>–</li>
-                                        <li><a target="_blank" href="https://www.facebook.com/colabrio/" class="facebook">Fb.</a>
+                                        <li><a target="_blank" href="" class="facebook">Fb.</a>
                                         </li>
-                                        <li><a target="_blank" href="https://www.facebook.com/colabrio/" class="linkedin">Lk.</a>
+                                        <li><a target="_blank" href="" class="linkedin">Lk.</a>
                                         </li>
-                                        <li><a target="_blank" href="https://www.facebook.com/colabrio/" class="instagram">In.</a>
+                                        <li><a target="_blank" href="" class="instagram">In.</a>
                                         </li>
                                     </ul>
                                 </div>
