--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
             <div class="header-wrap-inner">
                 <div class="left-part">
                     <div class="clb-hamburger btn-round btn-round-light" tabindex="1"> <i class="ion">
-							<a href="#" class="clb-hamburger-holder" aria-controls="site-navigation" aria-expanded="false">
-								<span class="_shape"></span>
-								<span class="_shape"></span>
-							</a>	
+					
 						</i>
                     </div>
                     <div class="site-branding">
@@ -43,7 +40,9 @@
                     <!-- .site-branding -->
                 </div>
                 <div class="right-part">
-                    <nav id="site-navigation" class="main-nav with-counters visible">
+                    <nav id="site-navigation" style="
+    left: 47% !important;
+" class="main-nav with-counters visible">
                         <!-- Mobile overlay -->
                         <div class="mbl-overlay">
                             <div class="mbl-overlay-bg"></div>
@@ -406,7 +405,7 @@ aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
         </div>
         <div class="page-container">
             <div class="demo-heading clb__heading text-center heading">
-                <h2 class="title">Supporting your business<br class="vc_hidden-xs"> My first priority</h2>
+                <h2 class="title">Supporting your business<br class="vc_hidden-xs"> The right way</h2>
                 <p class="demo-heading-subtitle subtitle">Developing websites for all industries.</p>
             </div>
             <div class="vc_row demo-items" data-isotope-grid="true" style="position: relative; height: 2977.94px;">
@@ -779,22 +778,6 @@ aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
                     </a>
                 </div>
                 <!-- Screenshot item -->
-                <div class="vc_col-lg-4 vc_col-md-6 vc_col-sm-12 flt_agency flt_info flt_service aos-init" data-aos="fade-up" data-aos-delay="200" style="position: absolute; left: 33.3325%; top: 2355.07px;">
-                    <a target="_blank" href="https://ohio.clbthemes.com/demo27" class="demo-item" data-cursor-class="cursor-link">
-                        <div class="parallax-holder">
-                            <div class="demo-item-img parallax">
-                                <picture class="scr-shadow">
-                                    <img src="assets/DemoTemplate27_Home.jpg" >
-                                </picture>
-                            </div>
-                        </div>
-                        <div class="demo-item-details text-center">
-                            <p class="demo-item-details-heading">Corporate</p>
-                            <p class="demo-item-details-category">Agency, Corporate</p>
-                        </div>
-                    </a>
-                </div>
-                <!-- Screenshot item -->
                 <div class="vc_col-lg-4 vc_col-md-6 vc_col-sm-12 flt_agency flt_info flt_portfolio aos-init" data-aos="fade-up" data-aos-delay="0" style="position: absolute; left: 66.665%; top: 2691.18px;">
                     <a target="_blank" href="https://ohio.clbthemes.com/demo21" class="demo-item" data-cursor-class="cursor-link">
                         <div class="parallax-holder">
@@ -810,39 +793,7 @@ aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
                         </div>
                     </a>
                 </div>
-                <!-- Screenshot item -->
-                <div class="vc_col-lg-4 vc_col-md-6 vc_col-sm-12 flt_agency flt_personal flt_portfolio aos-init" data-aos="fade-up" data-aos-delay="100" style="position: absolute; left: 0%; top: 2691.5px;">
-                    <a target="_blank" href="https://ohio.clbthemes.com/demo3" class="demo-item new" data-cursor-class="cursor-link dark-color">
-                        <div class="parallax-holder">
-                            <div class="demo-item-img parallax">
-                                <picture class="scr-shadow">
-                                    <img src="assets/DemoTemplate3_Home.jpg" >
-                                </picture>
-                            </div>
-                        </div>
-                        <div class="demo-item-details text-center">
-                            <p class="demo-item-details-heading">Showcase Interactive</p>
-                            <p class="demo-item-details-category">Agency, Studio, Portfolio</p>
-                        </div>
-                    </a>
-                </div>
-                <!-- Screenshot item -->
-                <div class="vc_col-lg-4 vc_col-md-6 vc_col-sm-12 flt_info aos-init" data-aos="fade-up" data-aos-delay="200" style="position: absolute; left: 33.3325%; top: 2691.5px;">
-                    <a target="_blank" href="https://ohio.clbthemes.com/demo30" class="demo-item" data-cursor-class="cursor-link dark-color">
-                        <div class="parallax-holder">
-                            <div class="demo-item-img parallax">
-                                <picture class="scr-shadow">
-                                    <img src="assets/DemoTemplate30_Home.jpg" >
-                                </picture>
-                            </div>
-                        </div>
-                        <div class="demo-item-details text-center">
-                            <p class="demo-item-details-heading">Coming Soon</p>
-                            <p class="demo-item-details-category">Maintenance, Handling</p>
-                        </div>
-                    </a>
-                </div>
-              
+                <!-- Screenshot item -->            
             </div>
         </div>
     </section>
