--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="AnasGamrani">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta property="og:title" content="Anas Gamrani | Web Developer - Graphic Designer">
+	<meta name="google-site-verification" content="rqBZYhFm3RwaXfuYb1r8_pCDlLowJDLvzQ5oSD8lKwQ" />
     <link rel="stylesheet" href="assets/main.min.css">
     <style>
         @media screen and (min-width: 1441px) and (max-width: 1920px) {
