--- a/index.html
+++ b/index.html
@@ -15,6 +15,32 @@
             }
         }
     </style>
+	<script crossorigin="anonymous" src="https://cdn.amcapi.com/translation/cloudtranslation-1.0.0.min.js"></script>
+	<script type="application/json" id="CloudTranslationConfig">
+    {
+  "Settings": {
+    "DefaultLanguage": "en",
+    "TranslatorProvider": "Azure", // not required if you filled in all translations
+    "TranslatorProviderKey": "{Your Microsoft Azure Translator Key}", // not required if above is empty
+    "UrlLanguageLocation": "Subdirectory"
+  },
+  "Languages": [
+    {
+      "Code": "en",
+      "DisplayName": "English"
+    },
+    {
+      "Code": "fr",
+      "DisplayName": "French"
+    }
+  ],
+ "Translations": [
+    {
+      "en": "Home",
+      "fr": "Acceuil"
+    },
+  }
+</script>
 <script src="/assets/l.js.download" async=""></script><link href="assets/client_default.css" type="text/css" rel="stylesheet"></head>
 <body class="custom-cursor" cz-shortcut-listen="true" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
     <!-- class="custom-cursor" -->
