--- a/index.html
+++ b/index.html
@@ -15,31 +15,14 @@
             }
         }
     </style>
-	<script crossorigin="anonymous" src="https://cdn.amcapi.com/translation/cloudtranslation-1.0.0.min.js"></script>
-	<script type="application/json" id="CloudTranslationConfig">
-    {
-  "Settings": {
-    "DefaultLanguage": "en",
-    "TranslatorProvider": "Azure", // not required if you filled in all translations
-    "TranslatorProviderKey": "{Your Microsoft Azure Translator Key}", // not required if above is empty
-    "UrlLanguageLocation": "Subdirectory"
-  },
-  "Languages": [
-    {
-      "Code": "en",
-      "DisplayName": "English"
-    },
-    {
-      "Code": "fr",
-      "DisplayName": "French"
-    }
-  ],
- "Translations": [
-    {
-      "en": "Home",
-      "fr": "Acceuil"
-    },
-  }
+	<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+<script>
+function googleTranslateElementInit() {
+new google.translate.TranslateElement({
+pageLanguage: 'en',
+layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+}, 'google_translate_element');
+}
 </script>
 <script src="/assets/l.js.download" async=""></script><link href="assets/client_default.css" type="text/css" rel="stylesheet"></head>
 <body class="custom-cursor" cz-shortcut-listen="true" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
