--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script>
 function googleTranslateElementInit() {
 new google.translate.TranslateElement({
-pageLanguage: 'en',
+pageLanguage: 'fr',
 layout: google.translate.TranslateElement.InlineLayout.SIMPLE
 }, 'google_translate_element');
 }
