--- a/index.html
+++ b/index.html
@@ -15,23 +15,22 @@
             }
         }
     </style>
-	<!--
-  This code will translate page contents automatically (without user input)
-  Settings located at line 9, current script will translate english to estonian
--->
-<style>#google_translate_element,.skiptranslate{display:none;}body{top:0!important;}</style>
-<div id="google_translate_element"></div>
-<script>
-    function googleTranslateElementInit() {
-        new google.translate.TranslateElement({
-            pageLanguage: 'en', 
-            includedLanguages: 'fr', 
-            autoDisplay: false
-        }, 'google_translate_element');
-        var a = document.querySelector("#google_translate_element select");
-        a.selectedIndex=1;
-        a.dispatchEvent(new Event('change'));
-    }
+<script type="text/javascript" src="http://translate.google.com/translate_a/element.js"></script>
+    <script type="text/javascript"> 
+
+function googleTranslateElementInit() { 
+  new google.translate.TranslateElement(
+  {
+      pageLanguage: 'ru',
+      layout: google.translate.TranslateElement.FloatPosition.TOP_LEFT,
+      autoDisplay: true
+  },
+  'google_translate_element'
+  ); 
+}
+
+googleTranslateElementInit();
+
 </script>
 <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 <script src="/assets/l.js.download" async=""></script><link href="assets/client_default.css" type="text/css" rel="stylesheet"></head>
