--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a
 
 <script type="text/javascript">
 if(localStorage.getItem("ChangeLanguageFirstTime") === null) {
-doGTranslate('en|es');
+doGTranslate('en|fr');
 localStorage.setItem("ChangeLanguageFirstTime", true);
 }
 </script>
