--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
             }
         }
     </style>
+	<style>
+		.skiptranslate {display:none !important;}
+		.custom-cursor {top: 0px !important;}
+		</style>
 	<!-- GTranslate: https://gtranslate.io/ -->
-<div id="google_translate_element2"></div>
+<div style="display:none !important;" id="google_translate_element2"></div>
 <script type="text/javascript">
 function googleTranslateElementInit2() {new google.translate.TranslateElement({pageLanguage: 'en',autoDisplay: false}, 'google_translate_element2');}
 </script><script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
